menu icon visibility bug fix

--- a/src/components/Sidebar/sidebar.module.scss
+++ b/src/components/Sidebar/sidebar.module.scss
@@ -65,6 +65,7 @@
 }
 
 .nav-toggle {
+  display: none;
   position: fixed;
   top: 1.5rem;
   left: 2rem;
@@ -75,7 +76,7 @@
   border-radius: 10%;
   padding: 0px 10px;
   margin: 10px 10px;
-  z-index: 10;
+  z-index: 5;
   transition: .3s;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   -webkit-tap-highlight-color: transparent;
